WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123722
HTMLNameCollection and friends are always rooted at a Document.
https://bugs.webkit.org/show_bug.cgi?id=123722
Summary
HTMLNameCollection and friends are always rooted at a Document.
Andreas Kling
Reported
2013-11-04 00:27:50 PST
HTMLNameCollection and friends are always rooted at a Document.
Attachments
Patch
(5.69 KB, patch)
2013-11-04 00:29 PST
,
Andreas Kling
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2013-11-04 00:29:30 PST
Created
attachment 215894
[details]
Patch
Andreas Kling
Comment 2
2013-11-04 00:49:27 PST
Committed
r158563
: <
http://trac.webkit.org/changeset/158563
>
Eric Carlson
Comment 3
2013-11-04 13:36:11 PST
Although it isn't obviously related, storage/domstorage/localstorage/storagetracker/storage-tracker-2-create.html and fast/block/float/float-append-child-crash.html both started crashing with
r158563
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug