HTMLNameCollection and friends are always rooted at a Document. <https://webkit.org/b/123722>

Tighten WindowNameCollection and DocumentNameCollection by making
their constructors take a Document&, and add a slightly better
document() than the one we inherit from LiveNodeListBase.

Also marked the classes FINAL and made create() helpers return
PassRef instead of PassRefPtr.

Reviewed by Antti Koivisto.

Canonical link: https://commits.webkit.org/141916@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158563 268f45cc-cd09-0410-ab3c-d52691b4dbfc