Source/WebCore/html/HTMLNameCollection.cpp
@@ -36,7 +36,7 @@ namespace WebCore {
 
 using namespace HTMLNames;
 
-HTMLNameCollection::HTMLNameCollection(ContainerNode& document, CollectionType type, const AtomicString& name)
+HTMLNameCollection::HTMLNameCollection(Document& document, CollectionType type, const AtomicString& name)
     : HTMLCollection(document, type, DoesNotOverrideItemAfter)
     , m_name(name)
 {
@@ -44,10 +44,9 @@ HTMLNameCollection::HTMLNameCollection(ContainerNode& document, CollectionType t
 
 HTMLNameCollection::~HTMLNameCollection()
 {
-    ASSERT(ownerNode().isDocumentNode());
     ASSERT(type() == WindowNamedItems || type() == DocumentNamedItems);
 
-    ownerNode().nodeLists()->removeCacheWithAtomicName(this, type(), m_name);
+    document().nodeLists()->removeCacheWithAtomicName(this, type(), m_name);
 }
 
 bool WindowNameCollection::nodeMatchesIfNameAttributeMatch(Element* element)
